--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,79 @@
+body {
+    justify-content: center;
+    background-image:url("../images/rps.jpg");
+    background-color: lightgrey;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+h1 {
+    text-align: center;
+    margin-top: 70px;
+    color: rgb(0, 0, 0);
+}
+main {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(175, 174, 174, 0.693);
+    margin-top: 10vh;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    border: 2px solid black;
+}
 #scoreboard {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
+.scores{
+    height: 50px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 26px;
+} 
+#middle {
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 20px;
+    font-weight: bold;
+}
+hr {
+    width: 50%;
+}
+#instructions {
+    margin-bottom: 20px;
+    margin-top: 50px;
 }
 #playerOptions {
-    color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
-.btnSelect{
-    color: rgb(255, 255, 255);
+button {
+    width: 150px;
+    height: 50px;
+    border: 3px solid black;
+    color: whitesmoke;
+    font-weight: 600;
+    font-size: 14px;
+    background-color: grey;
+    margin: 0 5px;
+}
+button:enabled:active {
+    background-color: rgb(62, 139, 113);
+    border-color: grey;
+}
+button:disabled {
+    opacity: 0.5;
+}
+button:enabled:hover {
+    font-size: 16px;
 }
 #Rock {
     color: rgb(255, 255, 255);
@@ -21,4 +89,6 @@
 }
 #start {
     color: rgb(255, 255, 255);
+    margin-top: 90px;
+    margin-bottom: 50px;
 }
